feat: complete device name localization and translation improvements
- Convert all device preset names to English for proper i18n support
- Update config.json and config.default.json with English device names
- Improve English translations for better readability and accuracy
- Fix device name display in settings menu to show English names
- Add missing translation keys for comprehensive i18n coverage

--- a/src/lib/i18n/en.json
+++ b/src/lib/i18n/en.json
@@ -112,6 +112,113 @@
     "config_saved": "Configuration saved successfully",
     "config_loaded": "Configuration loaded successfully"
   },
+  "confirm": {
+    "yes": "Yes",
+    "no": "No",
+    "confirm": "Confirm",
+    "cancel": "Cancel",
+    "save": "Save",
+    "restore": "Restore",
+    "switch": "Switch",
+    "delete": "Delete",
+    "delete_files": "Confirm delete? (Cannot be undone)",
+    "save_settings": "Confirm save settings?",
+    "switch_device": "Confirm switch device configuration?",
+    "import_files": "Confirm import {count} files?"
+  },
+  "device": {
+    "connecting": "Connecting to device...",
+    "connected": "Device connected successfully",
+    "disconnected": "Device disconnected",
+    "no_device": "No device connected",
+    "scanning": "Scanning device files...",
+    "scan_complete": "Scan completed",
+    "no_files": "No files found",
+    "file_count": "Found {count} files",
+    "files_found": "Found {count} files",
+    "check_path": "Check path"
+  },
+  "adb": {
+    "not_found": "ADB not found. Please install Android SDK.",
+    "command_failed": "ADB command failed",
+    "local_adb_corrupt": "Local ADB files may be corrupt, please recopy",
+    "solutions": "Solutions",
+    "solution1": "Place ADB files in the program directory's adb folder",
+    "solution2": "Install Android SDK Platform Tools and add to PATH",
+    "unauthorized_title": "Unauthorized devices detected",
+    "unauthorized_desc": "Please complete authorization on device:",
+    "unauthorized_step1": "1. Check device screen for USB debugging authorization popup",
+    "unauthorized_step2": "2. Check 'Always allow from this computer'",
+    "unauthorized_step3": "3. Click 'Allow' or 'OK'",
+    "unauthorized_help": "If no popup appears, try:",
+    "unauthorized_help1": "• Reconnect the USB cable",
+    "unauthorized_help2": "• Revoke USB debugging authorization in device settings and reconnect",
+    "offline_title": "Device is offline",
+    "offline_desc": "Please try:",
+    "offline_step1": "1. Reconnect the USB cable",
+    "offline_step2": "2. Re-enable USB debugging on the device",
+    "offline_step3": "3. Restart ADB service (run: adb kill-server && adb start-server)",
+    "no_device_title": "No device detected",
+    "no_device_desc": "Please ensure:",
+    "no_device_step1": "1. Device is connected via USB cable",
+    "no_device_step2": "2. USB debugging is enabled (in Developer Options)",
+    "no_device_step3": "3. Using data cable, not charging-only cable",
+    "quest_help": "For Meta Quest:",
+    "quest_help1": "- Put on headset and click 'Allow' in the popup",
+    "connected_devices": "Connected devices: {count}",
+    "download_url": "Download: https://developer.android.com/studio/releases/platform-tools"
+  },
+  "file": {
+    "name": "File Name",
+    "size": "Size",
+    "date": "Date",
+    "type": "Type",
+    "path": "Path",
+    "selected": "Selected",
+    "import_complete": "Import completed: {success} success, {failed} failed",
+    "delete_complete": "Delete completed: {success} success, {failed} failed",
+    "save_location": "Save location",
+    "total_size": "Total size",
+    "no_files_to_import": "No files to import",
+    "no_files_to_delete": "No files to delete",
+    "starting_import": "Starting import of {count} files to: {dir}",
+    "starting_delete": "Starting deletion of {count} files...",
+    "cleanup_warning": "Will delete {count} files, free {size} GB",
+    "select_files": "Select files to {action}:",
+    "select_filter_type": "Choose filtering method:",
+    "all_files": "All {action} ({count} files, {size})",
+    "filter_by_date": "By date",
+    "filter_by_source": "By source",
+    "filter_by_both": "By date and source",
+    "manual_select": "Manual selection",
+    "select_date_range": "Choose date range:",
+    "select_date": "Choose date:",
+    "select_source": "Choose source:",
+    "keep_days": "Keep files from last {days} days?",
+    "no_files_match": "No files match the filter criteria",
+    "operation_guide": "Operation: Space=select  A=select all  Enter=confirm  (press Enter without selection to return)",
+    "filter_results": "Filter Results"
+  },
+  "settings": {
+    "current_config": "Current Configuration",
+    "quick_switch": "Quick Switch",
+    "others": "Others",
+    "restore_default": "Restore Default Configuration",
+    "confirm_restore": "Confirm restore default configuration?",
+    "confirm_switch": "Confirm switch?",
+    "save_success": "Settings saved successfully",
+    "restore_success": "Default configuration restored",
+    "restore_warning": "This will restore all settings to default values",
+    "switch_success": "Switched to: {name}",
+    "switch_failed": "Switch failed",
+    "refreshing_list": "Refreshing list...",
+    "back": "Back",
+    "device_name": "Device Name",
+    "remote_path": "Remote Path",
+    "file_extensions": "File Extensions (comma separated, * for all)",
+    "enter_settings": "Go to settings to modify path?",
+    "cancel": "Cancel"
+  },
   "info": {
     "welcome": "Welcome to EasyADB",
     "select_option": "Please select an option",
