--- a/src/lib/i18n/zh.json
+++ b/src/lib/i18n/zh.json
@@ -112,6 +112,113 @@
     "config_saved": "配置保存成功",
     "config_loaded": "配置加载成功"
   },
+  "confirm": {
+    "yes": "是",
+    "no": "否",
+    "confirm": "确认",
+    "cancel": "取消",
+    "save": "保存",
+    "restore": "恢复",
+    "switch": "切换",
+    "delete": "删除",
+    "delete_files": "确认删除? (不可恢复)",
+    "save_settings": "确认保存设置?",
+    "switch_device": "确认切换设备配置?",
+    "import_files": "确认导入 {count} 个文件?"
+  },
+  "device": {
+    "connecting": "正在连接设备...",
+    "connected": "设备连接成功",
+    "disconnected": "设备已断开",
+    "no_device": "未连接设备",
+    "scanning": "正在扫描设备文件...",
+    "scan_complete": "扫描完成",
+    "no_files": "未找到文件",
+    "file_count": "找到 {count} 个文件",
+    "files_found": "找到 {count} 个文件",
+    "check_path": "检查路径"
+  },
+  "adb": {
+    "not_found": "未找到ADB。请安装Android SDK。",
+    "command_failed": "ADB命令执行失败",
+    "local_adb_corrupt": "本地ADB文件可能损坏，请重新复制",
+    "solutions": "解决方案",
+    "solution1": "将ADB文件放到程序目录的adb文件夹",
+    "solution2": "安装Android SDK Platform Tools并添加到PATH",
+    "unauthorized_title": "检测到未授权的设备",
+    "unauthorized_desc": "请在设备上完成授权:",
+    "unauthorized_step1": "1. 查看设备屏幕，应该有 USB 调试授权弹窗",
+    "unauthorized_step2": "2. 勾选「总是允许使用这台计算机进行调试」",
+    "unauthorized_step3": "3. 点击「允许」或「确定」",
+    "unauthorized_help": "如果没有弹窗，请尝试:",
+    "unauthorized_help1": "- 重新插拔 USB 数据线",
+    "unauthorized_help2": "- 在设备的开发者选项中撤销 USB 调试授权，然后重新连接",
+    "offline_title": "设备处于离线状态",
+    "offline_desc": "请尝试:",
+    "offline_step1": "1. 重新插拔 USB 数据线",
+    "offline_step2": "2. 在设备上重新启用 USB 调试",
+    "offline_step3": "3. 重启 ADB 服务 (运行: adb kill-server && adb start-server)",
+    "no_device_title": "未检测到设备",
+    "no_device_desc": "请确保:",
+    "no_device_step1": "1. 设备已通过 USB 连接到电脑",
+    "no_device_step2": "2. 设备已开启 USB 调试 (开发者选项中)",
+    "no_device_step3": "3. 使用的是数据线而不是仅充电线",
+    "quest_help": "对于 Meta Quest:",
+    "quest_help1": "- 戴上头显，在弹出的对话框中点击「允许」",
+    "connected_devices": "已连接设备: {count} 台",
+    "download_url": "下载: https://developer.android.com/studio/releases/platform-tools"
+  },
+  "file": {
+    "name": "文件名",
+    "size": "大小",
+    "date": "日期",
+    "type": "类型",
+    "path": "路径",
+    "selected": "已选择",
+    "import_complete": "导入完成: {success} 成功, {failed} 失败",
+    "delete_complete": "删除完成: {success} 成功, {failed} 失败",
+    "save_location": "保存位置",
+    "total_size": "总大小",
+    "no_files_to_import": "没有要导入的文件",
+    "no_files_to_delete": "没有要删除的文件",
+    "starting_import": "开始导入 {count} 个文件到: {dir}",
+    "starting_delete": "开始删除 {count} 个文件...",
+    "cleanup_warning": "将删除 {count} 个文件，释放 {size} GB",
+    "select_files": "选择要{action}的文件:",
+    "select_filter_type": "选择筛选方式:",
+    "all_files": "全部{action} ({count}个, {size})",
+    "filter_by_date": "按日期筛选",
+    "filter_by_source": "按来源筛选",
+    "filter_by_both": "同时按日期和来源",
+    "manual_select": "手动勾选",
+    "select_date_range": "选择日期范围:",
+    "select_date": "选择日期:",
+    "select_source": "选择来源:",
+    "keep_days": "保留最近{days}天的文件？",
+    "no_files_match": "没有符合筛选条件的文件",
+    "operation_guide": "操作: 空格=选择  A=全选  回车=确认  (不选直接回车=返回)",
+    "filter_results": "筛选结果"
+  },
+  "settings": {
+    "current_config": "当前配置",
+    "quick_switch": "快速切换",
+    "others": "其它",
+    "restore_default": "恢复默认配置",
+    "confirm_restore": "确认恢复默认配置?",
+    "confirm_switch": "确认切换?",
+    "save_success": "设置已保存",
+    "restore_success": "已恢复默认配置",
+    "restore_warning": "这将恢复所有设置为默认值",
+    "switch_success": "已切换到: {name}",
+    "switch_failed": "切换失败",
+    "refreshing_list": "刷新列表...",
+    "back": "返回上级",
+    "device_name": "设备名称",
+    "remote_path": "远程路径",
+    "file_extensions": "文件扩展名 (逗号分隔, * 表示全部)",
+    "enter_settings": "是否进入设置修改路径?",
+    "cancel": "取消"
+  },
   "info": {
     "welcome": "欢迎使用 EasyADB",
     "select_option": "请选择一个选项",
