--- a/src/lib/i18n/en.json
+++ b/src/lib/i18n/en.json
@@ -195,9 +195,19 @@
     "select_date": "Choose date:",
     "select_source": "Choose source:",
     "keep_days": "Keep files from last {days} days?",
+    "keep_days_question": "Keep files from last how many days?",
+    "keep_today": "Keep today only",
+    "keep_last_3_days": "Keep last 3 days",
+    "keep_last_7_days": "Keep last 7 days",
+    "keep_last_14_days": "Keep last 14 days",
+    "keep_last_30_days": "Keep last 30 days",
+    "keep_last_60_days": "Keep last 60 days",
+    "keep_last_90_days": "Keep last 90 days",
+    "delete_all": "Delete all",
     "no_files_match": "No files match the filter criteria",
     "operation_guide": "Operation: Space=select  A=select all  Enter=confirm  (press Enter without selection to return)",
-    "filter_results": "Filter Results"
+    "filter_results": "Filter Results",
+    "file_list_operations": "File list operations:"
   },
   "settings": {
     "current_config": "Current Configuration",
@@ -217,6 +227,7 @@
     "remote_path": "Remote Path",
     "file_extensions": "File Extensions (comma separated, * for all)",
     "enter_settings": "Go to settings to modify path?",
+    "select_device_config": "Select device configuration:",
     "cancel": "Cancel"
   },
   "info": {
